# RemoteTerminal

./: .gitignore  CMakeLists.txt  Makefile
BattleshipEndpoint/: BattleshipEndpoint.cpp  BattleshipEndpoint.h
BattleshipEngine/: BattleshipEngine.cpp  BattleshipEngine.h  CMakeLists.txt  Fleet.cpp  Fleet.h  GameEntities.h  Ship.cpp  Ship.h  coord.cpp  coord.h
BattleshipJsonProtocol/: BattleshipJsonProtocol.cpp  BattleshipJsonProtocol.h  CMakeLists.txt
BattleshipMessaging/: BattleshipMessageRouter.cpp  BattleshipMessageRouter.h  CMakeLists.txt
BattleshipServer/: Action.h  BattleshipSession.cpp  BattleshipSession.h  CMakeLists.txt  ServerProtocol.cpp  ServerProtocol.h  SessionTypes.h  main.cpp
BattleshipSession/: Action.h  BattleshipSession.cpp  BattleshipSession.h  CMakeLists.txt  SessionTypes.h
BattleshipSessionManager/: BattleshipSessionManager.cpp  BattleshipSessionManager.h  CMakeLists.txt
BattleshipWebServer/: BattleshipMessageRouter.cpp  BattleshipMessageRouter.h  BattleshipWebSocketManager.cpp  BattleshipWebSocketManager.h  CMakeLists.txt  WsGameController.cpp  WsGameController.h  main.cpp
DemoGame/: CMakeLists.txt  main.cpp
RemoteTerminalCore/: CMakeLists.txt
RemoteTerminalMessaging/: CMakeLists.txt  IRemoteTerminalEndpoint.h  RemoteTerminalEndpointRegistry.h  RemoteTerminalMessageRouter.cpp  RemoteTerminalMessageRouter.h
RemoteTerminalWebServer/: CMakeLists.txt  GamesHttpController.cpp  GamesHttpController.h  RemoteTerminalWebSocketController.cpp  RemoteTerminalWebSocketController.h  RemoteTerminalWebSocketManager.cpp  RemoteTerminalWebSocketManager.h  WsGameController.cpp  WsGameController.h  main.cpp
TicTacToeEndpoint/: CMakeLists.txt  TicTacToeEndpoint.cpp  TicTacToeEndpoint.h
TicTacToeEngine/: TicTacToeEngine.cpp  TicTacToeEngine.h  TicTacToeEntities.h
TicTacToeJsonProtocol/: TicTacToeJsonProtocol.cpp  TicTacToeJsonProtocol.h
TicTacToeRepl/: CMakeLists.txt  main.cpp
TicTacToeSession/: SessionTypes.h  TicTacToeSession.cpp  TicTacToeSession.h
TicTacToeSessionManager/: CMakeLists.txt  TicTacToeSessionManager.cpp  TicTacToeSessionManager.h
games/: CMakeLists.txt
games/Battleship/: CMakeLists.txt
games/Battleship/Advanced/: AdvancedShip.cpp  AdvancedShip.h  CMakeLists.txt  ShipAbility.h
games/Battleship/Advanced/AdvancedNavalBattleEngine/: AdvancedFleet.cpp  AdvancedFleet.h  AdvancedGameEntities.h  AdvancedNavalBattleEngine.cpp  AdvancedNavalBattleEngine.h  CMakeLists.txt  ShipAbility.h
games/Battleship/BattleshipEndpoint/: BattleshipEndpoint.cpp
games/Battleship/BattleshipEngine/: BattleshipEngine.cpp  CMakeLists.txt  Ship.cpp  coord.cpp
games/Battleship/BattleshipJsonProtocol/: BattleshipJsonProtocol.cpp  BattleshipJsonProtocol.h
games/Battleship/BattleshipSession/: Action.h  BattleshipSession.cpp  BattleshipSession.h
games/Battleship/Classic/: CMakeLists.txt
games/Battleship/Classic/BattleshipEndpoint/: BattleshipEndpoint.h  CMakeLists.txt
games/Battleship/Classic/BattleshipEngine/: CMakeLists.txt
games/Battleship/Classic/BattleshipJsonProtocol/: BattleshipJsonProtocol.cpp  CMakeLists.txt
games/Battleship/Classic/BattleshipSession/: BattleshipSession.h  SessionTypes.h
games/Battleship/Classic/battleshipWebapp/: .env.example  .gitignore  index.html  package-lock.json
games/Battleship/Classic/battleshipWebapp/src/: main.js
games/Battleship/Common/: CMakeLists.txt  Fleet.cpp  Fleet.h
games/Battleship/battleshipWebapp/: index.html  vite.config.js
games/Battleship/battleshipWebapp/src/: main.js  style.css
games/TicTacToe/: CMakeLists.txt
games/TicTacToe/TicTacToeEndpoint/: TicTacToeEndpoint.cpp
games/TicTacToe/TicTacToeEngine/: CMakeLists.txt
games/TicTacToe/TicTacToeJsonProtocol/: CMakeLists.txt  TicTacToeJsonProtocol.cpp  TicTacToeJsonProtocol.h
games/TicTacToe/TicTacToeSession/: CMakeLists.txt  SessionTypes.h  TicTacToeSession.cpp  TicTacToeSession.h
games/TicTacToe/TicTacToeSessionManager/: TicTacToeSessionManager.h
games/TicTacToe/ticTacToeWebapp/: index.html  package-lock.json  package.json
games/TicTacToe/ticTacToeWebapp/src/: main.js  style.css
infra/: battleship.service  remoteterminal.service
platform/: CMakeLists.txt
platform/RemoteTerminalCore/: CoreTypes.h
platform/RemoteTerminalMessaging/: EndpointTypes.h  RemoteTerminalEndpointRegistry.cpp
platform/RemoteTerminalWebServer/: RemoteTerminalWebSocketController.cpp  RemoteTerminalWebSocketManager.h
platform/remoteTerminalWebapp/: index.html  package-lock.json  package.json
remoteTerminalWebapp/: .env.example  index.html
remoteTerminalWebapp/src/: main.js  style.css
scripts/: bootstrap_ubuntu.sh  deploy.sh  setup_systemd.sh
ticTacToeWebapp/: .env.example  index.html  vite.config.js
ticTacToeWebapp/src/: main.js
webapp/: .env.example  index.html
webapp/src/: main.js  style.css
